--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script type="text/javascript"></script>
+        <script type="text/javascript"src="main.js"></script>
+        
     </head> 
-    <body class="body">
-        <div align="center">
+    <body>
+        <div>
             <h1> Paint</h1>
             <canvas id="myCanvas" width="800" height="600"></canvas>
             <br>
